fix header layout issue by media query

--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -1,16 +1,45 @@
-@use 'sass:map';
+// @use 'sass:map';
 
-/* media query */
-$breakpoints:(
-  medium:768px,
-  large:1280px
-  );
-@mixin mq($key){
-  $size:map.get($breakpoints, $key);
-  @media (min-width:$size){
-    @content;
-  }
+// /* media query */
+// $breakpoints:(
+//   medium:768px,
+//   large:1280px
+//   );
+// @mixin mq($key){
+//   $size:map.get($breakpoints, $key);
+//   @media (min-width:$size){
+//     @content;
+//   }
+// }
+
+$mobile-max-width:767px;
+$tablet-min-width:768px;
+$desktop-min-width:1280px;
+
+/* media query for mobile */
+
+@mixin mq-small{
+    @media only screen and (max-width:$mobile-max-width){
+        @content;
+    }
 }
+
+/* media query for tablet */
+
+@mixin mq-medium{
+    @media only screen and (min-width:$tablet-min-width){
+        @content;
+    }
+}
+
+/* media query for desktop */
+
+@mixin mq-large{
+    @media only screen and (min-width:$desktop-min-width){
+        @content;
+    }
+}
+
 
 
 @mixin flexed($direction, $justify, $align) {
